# next_level_grpc_mcp

./: .clang-format  .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  build.sh  docker-compose.yml  generate_code.sh  pyproject.toml
docs/: API_ERRORS.md  SECURITY_MODEL.md
drafts/: ISSUES_TO_CREATE.md
examples/python_client/: README.md  gmcp_client.py  requirements.txt
policy/: policy.example.yaml
proto/: gmcp.proto
protos/: agent_service.proto  common.proto  embedding_service.proto  neural_bus.proto
scripts/: demo_agent.py  run_server.py
src/client/: gmcp_client.cpp  gmcp_client.h  main.cpp
src/next_level_bus/core/: deephaven_session.py  delta_builder.py  table_registry.py
src/next_level_bus/grpc/: __init__.py  agent_service_impl.py  neural_bus_service_impl.py  server.py
src/next_level_bus/mcp_bridge/: resource_adapter.py
src/protos/: __init__.py
src/server/: gmcp_server.cpp  gmcp_server.h  main.cpp  memory_manager.cpp  memory_manager.h  tool_manager.cpp  tool_manager.h
